--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:dwKwhsW0D6MDkj+SfA1tCv9auK209LrVsc5KAsLfkx0=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+# APP_URL=http://localhost:8000
+APP_URL=https://scarlettelove.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -21,12 +22,26 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
+# Default Settings
+# DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+# DB_DATABASE=laravel_11x_api
 # DB_USERNAME=root
 # DB_PASSWORD=
+
+# Local Settings
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+# DB_DATABASE=local_db
+# DB_USERNAME=root
+# DB_PASSWORD=
+
+# Live Server Settings
+DB_DATABASE=prototype_db
+DB_USERNAME=prototype_user
+DB_PASSWORD=M@trix103!
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -64,3 +79,4 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
