update sql to live server then update the our-team

--- a/.env.example
+++ b/.env.example
@@ -31,14 +31,20 @@ LOG_LEVEL=debug
 # DB_PASSWORD=
 
 # Local Settings
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
 # DB_DATABASE=local_db
 # DB_USERNAME=root
 # DB_PASSWORD=
 
 # Live Server Settings
+# DB_DATABASE=prototype_db
+# DB_USERNAME=prototype_user
+# DB_PASSWORD=M@trix103!
+DB_CONNECTION=mysql
+DB_HOST=184.168.112.80
+DB_PORT=3306
 DB_DATABASE=prototype_db
 DB_USERNAME=prototype_user
 DB_PASSWORD=M@trix103!
@@ -79,4 +85,3 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
